i used element <Header> & <Section>  under Head & hero section. Also initial heading on the Readme file

--- a/develop/index.html
+++ b/develop/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+    <!--Header & Navigation Bar-->
+    <header>
+        <h1>
+            Hori<span class="seo">seo</span>n
+        </h1>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,10 +25,16 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
+        </nav>
+    </header>
+    
+    <!--Hero-->
+    <Section class="hero">
+
+    </Section>
+
+
+
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
