--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./develop/assets/css/style.css">
-        <title>website</title>
+        <title>Horiseon Website</title>
     </head>
 
     <body>
@@ -36,7 +36,7 @@
         <!--Main Section-->
         <main class="main-section">
             <div id="search-engine-optimization" class="main-content">
-                <img src="./develop/assets/images/search-engine-optimization.jpg"/>
+                <img src="./develop/assets/images/search-engine-optimization.jpg" alt="table with Laptop Notebook Pens and cup of Coffee">
                 <div  class="secondary-content-right">
                     <h2>Search Engine Optimization</h2>
                     <p>
@@ -46,7 +46,7 @@
             </div>
 
             <div id="online-reputation-management" class="main-content">
-                <img src="./develop/assets/images/online-reputation-management.jpg"/>
+                <img src="./develop/assets/images/online-reputation-management.jpg" alt="A person checking his phone while working on his Laptop">
                 <div  class="secondary-content-left">    
                     <h2>Online Reputation Management</h2>
                     <p>
@@ -56,7 +56,7 @@
             </div>
             
             <div id="social-media-marketing" class="main-content">
-                <img src="./develop/assets/images/social-media-marketing.jpg"/>
+                <img src="./develop/assets/images/social-media-marketing.jpg" alt="Group of people in a table Sharing their thoughts and idea on their projects">
                 <div  class="secondary-content-right">
                     <h2>Social Media Marketing</h2>
                     <p>
@@ -71,7 +71,7 @@
         <aside class="benefits">
             <div class="benefit-section">
                 <h3>Lead Generation</h3>
-                <img src="./develop/assets/images/lead-generation.png" />
+                <img src="./develop/assets/images/lead-generation.png" alt=" a inverted triagle with a arrow sign pointing down on a dollar sign">
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
@@ -79,7 +79,7 @@
 
             <div class="benefit-section">
                 <h3>Brand Awareness</h3>
-                <img src="./develop/assets/images/brand-awareness.png" />
+                <img src="./develop/assets/images/brand-awareness.png" alt="Bulb with a Necktie">
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
@@ -87,7 +87,7 @@
 
             <div class="benefit-section">
                 <h3>Cost Management</h3>
-                <img src="./develop/assets/images/cost-management.png"></img>
+                <img src="./develop/assets/images/cost-management.png" alt="gear with 3 dollar sign">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
